+ new dataClass "Magazin" * CSS was finished after new subMenuItem addition * all commant-strings was eliminated in CSS * z-index was normalized in new webComponent * new tabItem and tabContainer now interlinked correctly + supplement events for new subMenuItem and tabItem was added

--- a/RetailmentAcademy/WebFolder/KlassifikatorDinamicheskiy.waComponent/KlassifikatorDinamicheskiy.css
+++ b/RetailmentAcademy/WebFolder/KlassifikatorDinamicheskiy.waComponent/KlassifikatorDinamicheskiy.css
@@ -136,11 +136,11 @@
 }
 
 #{id}accordion1 {
-	 z-index: 1;
+	 z-index: 3;
 	 top: 0px;
 	 bottom: 0px;
 	 left: 0px;
-	 right: 0px;
+	 right: 25px;
 	
 	 position: absolute;
 	 
